--- a/interests/travel.css
+++ b/interests/travel.css
@@ -20,3 +20,20 @@
     text-align: center;
     color: white;
 }
+
+body {margin:0;
+      font: 20px Montserrat, sans-serif;
+      line-height: 1.8;
+      background-color:#DFECFF;
+}
+
+.button {
+    background-color: #555555; /* Black */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
